# rspack-allocation-test

./: .gitignore  .gitmodules  Cargo.toml  README.md  rust-toolchain.toml
10000/: index.jsx  package.json  pnpm-lock.yaml  rspack.config.js
src/: main.rs
