[package]
name = "mimalloc-test"
version = "0.1.0"
edition = "2021"

[dependencies]
libmimalloc-sys = { version = "0.1.40", package = "libmimalloc-sys-rspack", features = [
  "extended",
] }
mimalloc = { version = "0.1.44", package = "mimalloc-rspack" }

# libmimalloc-sys = { path = "/Users/bytedance/Projects/mimalloc_rust/libmimalloc-sys/", package = "libmimalloc-sys-rspack", features = [
#   "extended",
# ] }
#
# mimalloc = { path = "/Users/bytedance/Projects/mimalloc_rust", package = "mimalloc-rspack", features = [
#   # "secure",
# ] }
# rspack = { path = "/Users/bytedance/Projects/rspack/crates/rspack" }
# rspack_core = { path = "/Users/bytedance/Projects/rspack/crates/rspack_core/" }
# rspack_regex = { path = "/Users/bytedance/Projects/rspack/crates/rspack_regex/" }
# rspack_macros = { path = "/Users/bytedance/Projects/rspack/crates/rspack_macros" }
# rspack_error = { path = "/Users/bytedance/Projects/rspack/crates/rspack_error" }
# rspack_loader_swc = { path = "/Users/bytedance/Projects/rspack/crates/rspack_loader_swc/" }
# rspack_hook = { path = "/Users/bytedance/Projects/rspack/crates/rspack_hook/" }
#


rspack = { path = "../rspack/crates/rspack" }
rspack_core = { path = "../rspack/crates/rspack_core/" }
rspack_regex = { path = "../rspack/crates/rspack_regex/" }
rspack_macros = { path = "../rspack/crates/rspack_macros" }
rspack_error = { path = "../rspack/crates/rspack_error" }
rspack_loader_swc = { path = "../rspack/crates/rspack_loader_swc/" }
rspack_hook = { path = "../rspack/crates/rspack_hook/" }


stats_alloc = { version = "0.1.10", features = ["nightly"] }

serde_json = "*"
tokio = { version = "1.4.3", features = ["full"] }

[profile.release]
debug = true
strip = false
