[package]
name = "mimalloc-test"
version = "0.1.0"
edition = "2021"

[dependencies]
# libmimalloc-sys = { path = "/Users/bytedance/Projects/mimalloc_rust/libmimalloc-sys/", package = "libmimalloc-sys-rspack", features = [
#   "extended",
# ] }
#
# mimalloc = { path = "/Users/bytedance/Projects/mimalloc_rust", package = "mimalloc-rspack", features = [
#   # "secure",
# ] }
# rspack = { path = "/Users/bytedance/Projects/rspack/crates/rspack" }
# rspack_core = { path = "/Users/bytedance/Projects/rspack/crates/rspack_core/" }
# rspack_regex = { path = "/Users/bytedance/Projects/rspack/crates/rspack_regex/" }
# rspack_macros = { path = "/Users/bytedance/Projects/rspack/crates/rspack_macros" }
# rspack_error = { path = "/Users/bytedance/Projects/rspack/crates/rspack_error" }
# rspack_loader_swc = { path = "/Users/bytedance/Projects/rspack/crates/rspack_loader_swc/" }
# rspack_hook = { path = "/Users/bytedance/Projects/rspack/crates/rspack_hook/" }
#


mimalloc = { path = "./mimalloc_rust" }
libmimalloc-sys = { path = "./mimalloc_rust/libmimalloc-sys/", features = [
  "extended",
] }
rspack = { git = "https://github.com/web-infra-dev/rspack.git", features = [
  "full",
] }
rspack_core = { git = "https://github.com/web-infra-dev/rspack.git" }
rspack_regex = { git = "https://github.com/web-infra-dev/rspack.git" }

stats_alloc = { version = "0.1.10", features = ["nightly"] }

serde_json = "*"
tokio = { version = "1.4.3", features = ["full"] }

[profile.release]
debug = true
strip = false
