[package]
name = "mimalloc-test"
version = "0.1.0"
edition = "2021"

[dependencies]
mimalloc = { path = "./mimalloc_rust" } # Add features = ["debug"] to enable debug mode
libmimalloc-sys = { path = "./mimalloc_rust/libmimalloc-sys/", features = [
  "extended",
] }
rspack = { git = "https://github.com/web-infra-dev/rspack.git", features = [
  "full",
] }
rspack_core = { git = "https://github.com/web-infra-dev/rspack.git" }
rspack_regex = { git = "https://github.com/web-infra-dev/rspack.git" }

stats_alloc = { version = "0.1.10", features = ["nightly"] }

serde_json = "*"
tokio = { version = "1.4.3", features = ["full"] }

[profile.release]
debug = true
strip = false
